--- a/assests/css/register.css
+++ b/assests/css/register.css
@@ -139,3 +139,26 @@ footer {
   padding: var(--gutter-large);
   width: 100%;
 }
+
+.password-strength {
+    margin: 5px 0 15px;
+}
+
+.strength-bar {
+    height: 5px;
+    background-color: #eee;
+    border-radius: 3px;
+    margin-bottom: 5px;
+}
+
+.strength-fill {
+    height: 100%;
+    width: 0;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+}
+
+.strength-text {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
