Added a lot of changes. Fixed login issues; created student dashboard

--- a/view/waitlist.html
+++ b/view/waitlist.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waitlist Page</title>
-    <link rel="stylesheet" href="../assests/css/styles.css">
-    <link rel="stylesheet" href="../assests/css/waitlist.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/waitlist.css">
 </head>
 <body>
     <div class="waitlistpage">
         <div class="waitlist-logo">
-            <img src="../assests/images/KUMI_logo.svg" alt="Kumi Logo">
+            <img src="../assets/images/KUMI_logo.svg" alt="Kumi Logo">
         </div>
         
         <div class="waitlist-content">
